# aether_dashboard

./: .gitignore  DESIGN.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
lib/: CMakeLists.txt  build.sh  setup.sh
lib/include/: fk_engine.h
lib/src/: fk_engine.cpp  math_utils.h  model.h  sdf_parser.cpp  urdf_parser.cpp
public/models/husky/: model.sdf
public/wasm/: fk_engine.js  fk_engine.wasm
src/: index.css
src/components/layout/: BottomNav.tsx  DashboardLayout.tsx  Header.tsx  SideNav.tsx  navItems.ts
src/components/ui/: ConfirmModal.tsx  CopyButton.tsx  MetricBar.tsx  ServiceSettingsModal.tsx  StatusBadge.tsx  WidgetCard.tsx
src/components/widgets/: Apps.tsx  DeviceIdentity.tsx  RealtimeLogs.tsx  SystemMetrics.tsx  Viewport3D.tsx
src/hooks/: useFkEngine.ts  useRobotNode.ts
src/pages/: Dashboard.tsx
src/types/: index.ts
src/wasm/: fkEngine.ts  fkEngine.types.ts
